--- a/PoseLandmarker/Info.plist
+++ b/PoseLandmarker/Info.plist
@@ -4,6 +4,8 @@
 <dict>
 	<key>CFBundleDisplayName</key>
 	<string>SitUp</string>
+	<key>HASH_SALT_KEY</key>
+	<string>CHANGE_THIS_TO_A_SECURE_RANDOM_STRING</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
